# aws-cred-parser

./: README.md  pyproject.toml
credential_files/: credentials_2.sh
src/credential_grabber/: credential_grabber.py
test/: test_credential_grabber.py
